name:                index-basic
version:             0.1.0.0
synopsis:            Standard complement of indexed monads built atop index-core
-- description:         
homepage:            http://github.com/tel/index-basic
license:             BSD3
license-file:        LICENSE
author:              Joseph Abrahamson
maintainer:          me@jspha.com
copyright:           2014 (c) Joseph Tel Abrahamson
category:            Control
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:
    Control.IMonad.State
  build-depends:       base         >= 4.6 && < 4.8
                     , index-core   >= 1.0 && < 1.1
                     , transformers >= 0.2 && < 0.4
  hs-source-dirs:      src
  default-language:    Haskell2010